Fix styling and delete service
