# api/generated.go
@@ -43,6 +43,9 @@ type ServerInterface interface {
 
 	// (POST /web/private/service-provider/endpoints)
 	RegisterEndpoint(ctx echo.Context) error
+
+	// (DELETE /web/private/service-provider/endpoints/{id})
+	DeleteEndpoint(ctx echo.Context, id string) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -169,6 +172,22 @@ func (w *ServerInterfaceWrapper) RegisterEndpoint(ctx echo.Context) error {
 	return err
 }
 
+// DeleteEndpoint converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteEndpoint(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.DeleteEndpoint(ctx, id)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -207,6 +226,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/web/private/service-provider", wrapper.GetServiceProvider)
 	router.PUT(baseURL+"/web/private/service-provider", wrapper.UpdateServiceProvider)
 	router.POST(baseURL+"/web/private/service-provider/endpoints", wrapper.RegisterEndpoint)
+	router.DELETE(baseURL+"/web/private/service-provider/endpoints/:id", wrapper.DeleteEndpoint)
 
 }
 
